<resources>
    <string name="app_name">Vulcan Updates</string>
    <string name="app_brief">One UI 6.1 Port - Luphaestus</string>
    <string name="ok">OK</string>
    <string name="reject">Reject</string>
    <string name="sesl_cancel">Cancel</string>
    <string name="tweaks">Tweaks</string>
    <string name="display">Display</string>
    <string name="bugreport">Bug Report</string>
    <string name="tab_twrp">Twrp</string>
    <string name="tab_modules">Modules</string>
    <string name="tab_apps">Apps</string>
    <string name="waiting">Waiting…</string>
    <string name="download_failed">FAILED</string>
    <string name="download_in_progress">Download in Progress</string>
    <string name="starting_download">Starting download…</string>
    <string name="download_completed">Download completed</string>
    <string name="download_failed_with_message">Download failed: %1$s</string>
    <string name="download_paused">Download paused</string>
    <string name="oobe_onboard_msg1_title">Customisable</string>
    <string name="oobe_onboard_msg2_title">Automated</string>
    <string name="oobe_onboard_msg3_title">Free</string>
    <string name="oobe_onboard_msg1_summary">Customise your phone with tweaks made specifically for Vulcan ROM.</string>
    <string name="oobe_onboard_msg2_summary">Tweaks are automatically flashed and checked for updates.</string>
    <string name="oobe_onboard_msg3_summary">No subscriptions, no in-app purchases, no costs at all. Unless you want to donate ;)</string>
    <string name="tos">Terms of Service</string>
    <string name="tos_content">1. Acceptance of Terms\n\n1.1 Respect the Work: Vulcan ROM is the product of extensive development. Please do not redistribute or modify it without proper attribution. Sharing is encouraged, but give credit where it’s due.\n11.2 Warranty Warning: Using this ROM may void your device warranty. Proceed with this knowledge and at your own risk.\n\n2. Updates and Changes\n\n2.1 Changes to Terms: We reserve the right to modify these terms or the ROM at any time. Please check back regularly for updates.\n12.2 Privacy Policy: We respect your privacy. We do not collect personal data without your consent. If data collection is necessary, we will inform you clearly and obtain your permission.\n\n3. Installation Guidelines\n\n3.1 Backup Your Data: Before installing Vulcan ROM, ensure you have a complete backup of your data. This step is crucial as installation will erase your existing data.\n13.2 Follow Instructions: Carefully follow the installation instructions provided. Incorrect installation can lead to issues with your device.\n13.3 Reporting Issues: If you encounter any bugs or issues, report them to us. Your feedback helps us improve the ROM.\n\n4. Community and Support\n\n4.1 Join the Community: Engage with our community of users. Share your experiences, tips, and support each other. Collaboration enhances everyone’s experience.\n14.2 Provide Feedback: Your feedback is valuable. Share your thoughts and suggestions to help us make Vulcan ROM better.</string>
    <string name="oobe_tos_text">By continuing, you agree to the %1$s.</string>
    <string name="accept_tos">Continue</string>
    <string name="Software_info">Device Info</string>
    <string name="About_title">About Vulcan ROM Updates</string>
    <string name="telegram">Telegram</string>
    <string name="link_telegram" translatable="false">https://t.me/VulcanROM</string>
    <string name="premium">Vulcan Premium</string>
    <string name="link_telegram_premium" translatable="false">https://www.youtube.com/watch?v=dQw4w9WgXcQ</string>
    <string name="Xda">Xda</string>
    <string name="link_xda" translatable="false">https://xdaforums.com/</string>
    <string name="vulcan_updates_manifest">https://raw.githubusercontent.com/Luphaestus/VulcanUpdate/main/Manifests/VulcanUpdates.xml</string>
    <string name="app_manifest">https://raw.githubusercontent.com/Luphaestus/VulcanUpdate/main/Manifests/Apps.xml</string>
    <string name="module_manifest">https://raw.githubusercontent.com/Luphaestus/VulcanUpdate/main/Manifests/Modules.xml</string>
    <string name="twrp_manifest">https://raw.githubusercontent.com/Luphaestus/VulcanUpdate/main/Manifests/Twrp.xml</string>
    <string name="vulcan_updates_manifest_dev">https://raw.githubusercontent.com/Luphaestus/VulcanUpdate/dev/Manifests/VulcanUpdates.xml</string>
    <string name="app_manifest_dev">https://raw.githubusercontent.com/Luphaestus/VulcanUpdate/dev/Manifests/Apps.xml</string>
    <string name="module_manifest_dev">https://raw.githubusercontent.com/Luphaestus/VulcanUpdate/dev/Manifests/Modules.xml</string>
    <string name="twrp_manifest_dev">https://raw.githubusercontent.com/Luphaestus/VulcanUpdate/dev/Manifests/Twrp.xml</string>
    <string name="Settings_title">Settings</string>
    <string name="delete_appdata_and_exit">Delete App-Data and exit</string>
    <string name="delete_appdata_and_exit_warning">Attention: This will delete all personal data. Continue? </string>
    <string name="dev_options">Developer options</string>
    <string name="more_information">More Information</string>
    <string name="Notifications">Notifications</string>
    <string name="notificaion_enable_title">Updates notifications</string>
    <string name="notifications_description">Automatically check for updates and show a notification when one is available</string>
    <string name="check_frequency_title">Updates check frequency</string>
    <string name="Network">Network</string>
    <string name="update_network_title">Update over network</string>
    <string name="update_channel">Update channel</string>
    <string name="selected_file_shutdown_animation_qmg">Selected file: shutdown_animation.qmg</string>
    <string name="choose_file">Choose File</string>
    <string name="bootloader_anim_description">This will flash a custom up-param, which includes the initial boot image (Galaxy Note 20 screen), download mode, device warning messages, and others.</string>
    <string name="bootloader_anim_upload_title">Upload Boot Animation (up_param.bin)</string>
    <string name="bootloader_anim_upload_description">Instructions for Creating a Custom Up-Param</string>
    <string name="bootloader_anim_upload_instructions">1. Download the bootloader (BL) for your device from SamFW.\n2. Extract the contents of the downloaded BL file.\n3. Open Up-Param as an archive (please do not extract it).\n4. Edit the desired image using Microsoft Paint, or obtain a pre-made image from our Telegram group.</string>
    <string name="apply">Apply</string>
    <string name="_60_hz">60 Hz</string>
    <string name="_120_hz">120 Hz</string>
    <string name="force_refresh_description">Adjust your screen\'s refresh rate.</string>
    <string name="adaptive_title">Adaptive Refresh Rate</string>
    <string name="adaptive_description">Automatically adjusts based on content.</string>
    <string name="_48_title">Refresh Rate 48Hz</string>
    <string name="_48_description">Lower refresh rate for battery saving.</string>
    <string name="_60hz_title">Refresh Rate 60Hz</string>
    <string name="_60hz_description">Standard refresh rate.</string>
    <string name="_96hz_title">Refresh Rate 96Hz</string>
    <string name="_96hz_description">Smooth experience.</string>
    <string name="_120hz_title">Refresh Rate 120Hz</string>
    <string name="_120hz_description">High refresh rate for gaming.</string>
    <string name="no_network">No networks available</string>
    <string name="device_image_settings_description">This will change the device image in settings.</string>
    <string name="device_settings_image_upload_title">Upload Device Image (png)</string>
    <string name="root_not_available">Root not available</string>
    <string name="give_root_plz">Please give Vulcan Updates root permission within Kernel SU.</string>
    <string name="give_root_instructions"><![CDATA[Make sure to press 3 dots > show system apps to show Vulcan Updates in Kernel Su.]]></string>
    <string name="module_uninstallation_failed">Module uninstallation failed: %1$s (Code: %2$s)</string>
    <string name="failed_to_retrieve_module_list">Failed to retrieve module list</string>
    <string name="installing">Installing…</string>
    <string name="download_progress">%1$dMB / %2$dMB</string>
    <string name="paused_text">Paused %1$s</string>
    <string name="boot_animation_title">Boot Animation</string>
    <string name="boot_animation_description">These animations will appear after the Galaxy Note 20 boot screen.</string>
    <string name="upload_boot_samsung">Upload Boot Samsung (.qmg file)</string>
    <string name="boot_samsung_description">Animation that plays before Samsung Loop. Only plays once.</string>
    <string name="upload_boot_samsung_loop">Upload Boot Samsung Loop (.qmg file)</string>
    <string name="boot_samsung_loop_description">This animation plays continuously until the phone is booted.</string>
    <string name="upload_shutdown_samsung">Upload Shutdown Samsung (.qmg file)</string>
    <string name="shutdown_samsung_description">Animation that is shown when powering off the phone.</string>
    <string name="bootloader_title">Bootloader Boot Animation</string>
    <string name="bootloader_brief">Change the first boot image.</string>
    <string name="system_animation_title">System Boot Animation</string>
    <string name="system_animation_brief">Change the second boot animation.</string>
    <string name="remove_file">Remove</string>
    <string name="selected_file">Selected File: %1$s</string>
    <string name="selected_file_none">Selected file: None</string>
    <string name="selected_file_shutdown">Selected file: shutdown_animation.qmg</string>
    <string name="bug_report_title">Bug Report Title</string>
    <string name="telegram_username">Telegram Username</string>
    <string name="device_model">Device Model</string>
    <string name="vulcan_rom_version">Vulcan ROM Version</string>
    <string name="frequency_of_bug">Frequency of Bug</string>
    <string name="occurs_all_the_time">Occurs all the time</string>
    <string name="occurs_occasionally">Occurs occasionally</string>
    <string name="occurs_after_formatting">Occurs after Formatting</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_tested">Not Tested</string>
    <string name="problem_description">Problem Description</string>
    <string name="submit_bug_report">Submit Bug Report</string>
    <string name="settings_image_title">Settings Device Image</string>
    <string name="settings_image_brief">Change the device image in settings.</string>
    <string name="force_refresh_title">Force Refresh Rate</string>
    <string name="force_refresh_brief">Set the refresh rate for the display.</string>
    <string name="menu_refresh">Refresh</string>
    <string name="device_information">Device Information</string>
    <string name="battery_information">Battery Information</string>
    <string name="display_information">Display Information</string>
    <string name="camera_information_0">Camera Information 0</string>
    <string name="camera_information_1">Camera Information 1</string>
    <string name="camera_information_2">Camera Information 2</string>
    <string name="camera_information_3">Camera Information 3</string>
    <string name="camera_information_4">Camera Information 4</string>
    <string name="ram_information">Ram Information</string>
    <string name="internal_storage_information">Internal Storage Information</string>
    <string name="cpu_frequency">Cpu Frequency</string>
    <string name="cpu_information">Cpu Information</string>
    <string name="android_device_information">Android Device Information</string>
    <string name="java_environment_information">Java Environment Information</string>
    <string name="kernel_information">Kernel Information</string>
</resources>