<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory
        android:title="@string/Notifications">
        <SwitchPreferenceCompat
            android:key="notifications"
            android:summary="@string/notifications_description"
            android:title="@string/notificaionenable_title" />

        <ListPreference
            android:defaultValue="24"
            android:entries="@array/Updates_frequency_entries"
            android:entryValues="@array/Updates_frequency_values"
            android:key="update_frequency"
            android:title="@string/check_frequency_title"
            app:useSimpleSummaryProvider="true"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/Network">
        <DropDownPreference
            android:defaultValue="false"
            android:entries="@array/update_over_network_entries"
            android:entryValues="@array/update_over_network_values"
            android:key="update_over_network"
            android:title="@string/update_network_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/more_information">
        <PreferenceScreen
            android:key="tos_pref"
            android:title="@string/tos" />

        <PreferenceScreen
            android:key="about_app_pref"
            android:title="@string/About_title">
            <intent
                android:targetClass="com.vulcanizer.updates.activities.AboutActivity"
                android:targetPackage="com.vulcanizer.updates" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="dev_options"
        android:title="@string/dev_options"
        app:isPreferenceVisible="false">
        <DropDownPreference
            android:defaultValue="false"
            android:key="update_channel"
            android:title="@string/update_channel"
            app:useSimpleSummaryProvider="true" />
        <PreferenceScreen
            android:key="delete_app_data_pref"
            android:title="@string/delete_appdata_and_exit" />
    </PreferenceCategory>

</PreferenceScreen>