<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- App Name in the Top Left Corner -->
    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:padding="16dp"/>

    <!-- Center Container for Message and Button -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">

        <!-- No Networks Available Message -->
        <TextView
            android:id="@+id/no_networks_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/root_not_available"
            android:textSize="24sp"
            android:layout_marginBottom="20dp"/>
        <!-- No Networks Available Message -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/give_root_plz"
            android:textSize="16sp"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/give_root_instructions"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"/>

        <!-- Try Again Button -->
        <Button
            android:id="@+id/button_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:letterSpacing="0.1"
            android:paddingStart="48dp"
            android:paddingEnd="48dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
        />

    </LinearLayout>
</RelativeLayout>
