<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    app:layout_location="drawer_panel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/draweritem_tweaks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/drawer_item_selector"
            android:foreground="@drawable/drawer_item_list_ripple"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="12dp"
            android:paddingStart="18dp"
            android:paddingEnd="18dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_oui_category_apps"
                tools:ignore="ContentDescription" />

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:paddingStart="15dp"
                android:singleLine="true"
                android:text="@string/tweaks"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/draweritem_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/drawer_item_selector"
            android:foreground="@drawable/drawer_item_list_ripple"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="12dp"
            android:paddingStart="18dp"
            android:paddingEnd="18dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_oui_category_display"
                tools:ignore="ContentDescription" />

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:paddingStart="15dp"
                android:singleLine="true"
                android:text="@string/display"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/draweritem_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/drawer_item_selector"
            android:foreground="@drawable/drawer_item_list_ripple"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            android:paddingStart="18dp"
            android:paddingEnd="18dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_oui_category_smartthings"
                tools:ignore="ContentDescription" />

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:paddingStart="15dp"
                android:singleLine="true"
                android:text="@string/Software_info"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <View style="@style/DrawerDividerStyle" />

        <LinearLayout
            android:id="@+id/draweritem_begreport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/drawer_item_selector"
            android:foreground="@drawable/drawer_item_list_ripple"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="12dp"
            android:paddingStart="18dp"
            android:paddingEnd="18dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_oui_error"
                tools:ignore="ContentDescription" />

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:paddingStart="15dp"
                android:singleLine="true"
                android:text="@string/bugreport"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/draweritem_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/drawer_item_selector"
            android:foreground="@drawable/drawer_item_list_ripple"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            android:paddingStart="18dp"
            android:paddingEnd="18dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_oui_settings"
                tools:ignore="ContentDescription" />

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:paddingStart="15dp"
                android:singleLine="true"
                android:text="@string/Settings_title"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>